docs/tests/test_results.txt
INFO:__main__:Executando: Validação Individual
INFO:core.utils.column_validator:\u2705 Coluna 'NOME_PRODUTO' normalizada para 'nome_produto'
INFO:core.utils.column_validator:\u2705 Coluna 'PRODUTO' normalizada para 'codigo'
INFO:core.utils.column_validator:\u2705 Coluna 'VENDA_30DD' normalizada para 'venda_30_d'
INFO:core.utils.column_validator:\u2705 Coluna 'ESTOQUE_UNE' normalizada para 'estoque_atual'
WARNING:core.utils.column_validator:\u26a0\ufe0f Coluna 'coluna_inexistente' não encontrada. Sugestões: []
INFO:__main__:Executando: Validação Múltipla
INFO:core.utils.column_validator:\u2705 Coluna 'NOME_PRODUTO' normalizada para 'nome_produto'
INFO:core.utils.column_validator:\u2705 Coluna 'VENDA_30DD' normalizada para 'venda_30_d'
WARNING:core.utils.column_validator:\u26a0\ufe0f Coluna 'coluna_falsa' não encontrada. Sugestões: []
ERROR:__main__:Erro ao executar Validação Múltipla: 'charmap' codec can't encode character '\u2705' in position 2: character maps to <undefined>
Traceback (most recent call last):
  File "C:\Users\André\Documents\Agent_Solution_BI\scripts\tests\test_error_mitigation.py", line 336, in run_all_tests
    passed = test_func()
             ^^^^^^^^^^^
  File "C:\Users\André\Documents\Agent_Solution_BI\scripts\tests\test_error_mitigation.py", line 131, in test_multiple_columns_validation
    print_validation_report(result)
  File "C:\Users\André\Documents\Agent_Solution_BI\core\utils\column_validator.py", line 433, in print_validation_report
    print(f"\n\u2705 Colunas Válidas ({len(validation['valid'])}):")
  File "C:\Program Files\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2705' in position 2: character maps to <undefined>
INFO:__main__:Executando: Validação de Código
INFO:core.utils.column_validator:\u2705 Coluna 'ESTOQUE_ATUAL' normalizada para 'estoque_atual'
INFO:core.utils.column_validator:\u2705 Código corrigido: 3 substituições
ERROR:__main__:Erro ao executar Validação de Código: 'charmap' codec can't encode character '\u2192' in position 15: character maps to <undefined>
Traceback (most recent call last):
  File "C:\Users\André\Documents\Agent_Solution_BI\scripts\tests\test_error_mitigation.py", line 336, in run_all_tests
    passed = test_func()
             ^^^^^^^^^^^
  File "C:\Users\André\Documents\Agent_Solution_BI\scripts\tests\test_error_mitigation.py", line 201, in test_query_code_validation
    print_test_result("Correção no código", True, "NOME_PRODUTO \u2192 nome_produto")
  File "C:\Users\André\Documents\Agent_Solution_BI\scripts\tests\test_error_mitigation.py", line 57, in print_test_result
    print(f"  {details}")
  File "C:\Program Files\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2192' in position 15: character maps to <undefined>
INFO:__main__:Executando: Sugestões de Erro
WARNING:core.utils.column_validator:\u26a0\ufe0f Coluna 'nome_produt' não encontrada. Sugestões: ['nome_produto']
INFO:__main__:Executando: Query Real
INFO:__main__:Executando: Tratamento de Exceções
WARNING:core.utils.column_validator:\u26a0\ufe0f Coluna 'coluna_totalmente_inexistente' não encontrada. Sugestões: []

================================================================================
  SISTEMA DE MITIGAÇÃO DE ERROS - SUITE DE TESTES
================================================================================

================================================================================
  TESTE 1: Validação Individual de Colunas
================================================================================

[PASS] - Validar 'nome_produto'
  Resultado: válido, Corrigido: nome_produto

[PASS] - Validar 'NOME_PRODUTO'
  Resultado: válido, Corrigido: nome_produto

[PASS] - Validar 'PRODUTO'
  Resultado: válido, Corrigido: codigo

[PASS] - Validar 'VENDA_30DD'
  Resultado: válido, Corrigido: venda_30_d

[PASS] - Validar 'ESTOQUE_UNE'
  Resultado: válido, Corrigido: estoque_atual

[PASS] - Validar 'coluna_inexistente'
  Resultado: inválido, Corrigido: None

[STATS] Resultado: 6/6 testes passaram

================================================================================
  TESTE 2: Validação de Múltiplas Colunas
================================================================================

============================================================
RELATÓRIO DE VALIDAÇÃO DE COLUNAS
============================================================

================================================================================
  TESTE 3: Validação de Código de Query
================================================================================

[CODE] Codigo Original:

df.filter(pl.col("NOME_PRODUTO").is_not_null())
  .select(["codigo", "VENDA_30DD", "ESTOQUE_ATUAL"])
  .group_by("une")
  .agg(pl.col("VENDA_30DD").sum())


[CODE] Codigo Corrigido:

df.filter(pl.col("nome_produto").is_not_null())
  .select(["codigo", "venda_30_d", "estoque_atual"])
  .group_by("une")
  .agg(pl.col("venda_30_d").sum())


[INFO] Colunas Detectadas: ['NOME_PRODUTO', 'codigo', 'VENDA_30DD', 'ESTOQUE_ATUAL', 'une']
[INFO] Valido: True
[INFO] Correcoes: {'NOME_PRODUTO': 'nome_produto', 'VENDA_30DD': 'venda_30_d', 'ESTOQUE_ATUAL': 'estoque_atual'}

[PASS] - Detecção de colunas
  5 colunas detectadas

[PASS] - Correção no código

================================================================================
  TESTE 4: Tratamento de Erros com Sugestões
================================================================================

[PASS] - Sugestões para typo
  Sugestões: ['nome_produto']

================================================================================
  TESTE 5: Query Real - 'ranking de vendas todas as unes'
================================================================================

[CODE] Codigo da Query:

import polars as pl

df = load_data()

# Ranking de vendas por UNE
result = (
    df.filter(pl.col("venda_30_d") > 0)
      .group_by(["une", "une_nome"])
      .agg([
          pl.col("venda_30_d").sum().alias("total_vendas"),
          pl.col("codigo").n_unique().alias("qtd_produtos")
      ])
      .sort("total_vendas", descending=True)
)

result


[INFO] Colunas Validadas: True
[INFO] Total de colunas: 2

[PASS] - Query real validada
  Todas as colunas são válidas

================================================================================
  TESTE 6: Levantamento de Exceções
================================================================================

[PASS] - ColumnValidationError levantada
  Mensagem: Coluna 'coluna_totalmente_inexistente' não encontrada no DataFrame.

Colunas disponíveis:
  - codigo...

================================================================================
  RELATÓRIO FINAL
================================================================================
[PASS] Validação Individual
[FAIL] Validação Múltipla
[FAIL] Validação de Código
[PASS] Sugestões de Erro
[PASS] Query Real
[PASS] Tratamento de Exceções

[STATS] RESULTADO GERAL: 4/6 testes passaram (66%)

[WARNING] 2 teste(s) falharam. Verifique os logs acima.
